# etils

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml  pytest_and_autopublish.yml
docs/: api-design.md  conf.py  index.md
etils/: __init__.py
etils/array_types/: README.md  __init__.py  dtypes.py  dtypes_test.py  import_test.py  typing.py  typing_test.py
etils/eapp/: README.md  __init__.py  dataclass_flags.py  dataclass_flags_test.py  logging_utils.py
etils/eapp/tests/: test_logging_utils.py
etils/ecolab/: README.md  __init__.py  adhoc_error.py  adhoc_error_test.py  array_as_img.py  array_as_img_test.py  auto_display_utils.py  auto_display_utils_test.py  cell_autoreload.py  colab_utils.py  colab_utils_test.py  common.py  highlight_util.py  inplace_reload.py  inplace_reload_test.py  ip_utils.py  lazy_imports.py  lazy_imports_test.py  lazy_utils.py  mock_colab.py  module_utils.py  patch_utils.py  tabs.py  test_utils.py
etils/ecolab/adhoc_lib/: module_deps_utils.py  module_deps_utils_test.py  reload_workspace_lib.py
etils/ecolab/docs/: demo.ipynb
etils/ecolab/inspects/: __init__.py  attrs.py  attrs_test.py  auto_utils.py  core.py  html_helper.py  html_helper_test.py  nodes.py  nodes_test.py  resource_utils.py
etils/ecolab/inspects/static/: auto_activate.js  main.js  theme.css
etils/ecolab/pyjs_com/: __init__.py  py_js_com.js  py_js_com.py
etils/ecolab/static/: highlight.css
etils/edc/: README.md  __init__.py  cast_utils.py  cast_utils_test.py  context.py  context_test.py  dataclass_utils.py  dataclass_utils_test.py  field_utils.py  field_utils_test.py  frozen_utils.py  frozen_utils_test.py  helpers.py  stack.py  stack_test.py
etils/enp/: README.md  __init__.py  array_spec.py  array_spec_test.py  checking.py  checking_test.py  compat.py  compat_test.py  einops_utils.py  einops_utils_test.py  enp_test.py  geo_utils.py  geo_utils_test.py  interp_utils.py  interp_utils_test.py  linalg.py  linalg_test.py  numpy_utils.py  numpy_utils_test.py  testing.py  torch_mock.py  type_parsing.py  type_parsing_test.py  typing.py
etils/enp/array_types/: __init__.py  dtypes.py  dtypes_test.py  typing.py  typing_test.py
etils/epath/: README.md  __init__.py  abstract_path.py  abstract_path_test.py  backend.py  backend_test.py  flags.py  flags_test.py  gpath.py  gpath_test.py  import_test.py  register.py  register_test.py  resource_utils.py  resource_utils_test.py  stat_utils.py  testing.py  typing.py
etils/epath/docs/: intro.md
etils/epy/: README.md  __init__.py  _internal.py  _multiprocess.py  backports.py  backports_test.py  binary_import.py  contextlib.py  contextlib_test.py  descriptors.py  descriptors_test.py  env_utils.py  itertools.py  itertools_test.py  lazy_api_imports_utils.py  lazy_api_imports_utils_test.py  lazy_imports_utils.py  lazy_imports_utils_test.py  py_utils.py  py_utils_test.py  re_utils.py  re_utils_test.py  reraise_utils.py  reraise_utils_test.py  testing.py  text_utils.py  text_utils_test.py  typing.py
etils/epy/adhoc_utils/: __init__.py  binary_import.py  curr_args.py  dm_backend.py  module_utils.py  module_utils_test.py  utils.py
etils/epy/adhoc_utils/tests/: deps.proto  example-hyphen.proto  example.proto  failure.proto
etils/etqdm/: __init__.py  tqdm_utils.py  tqdm_utils_test.py
etils/etree/: README.md  __init__.py  backend.py  backend_test.py  tree_utils.py  tree_utils_test.py  typing.py
etils/exm/: __init__.py  dummy.py
etils/klinen/: README.md  __init__.py  collections.py  intermediate.py  intermediate_proxy.py  layers.py  module.py  module_rng_test.py  module_test.py  traverse.py
etils/lazy_imports/: __init__.py
oss/: compare_version.py  get_pypi_version.py
