[project]
name = "etils"
description = "Collection of common python utils"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Conchylicultor", email="etils@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    # Note: Python and license automatically added by some tools
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "utils", "jax", "tensorflow", "tf", "machine learning", "deep learning"
]
# No default dependencies (submodules deps are optional and should be
# installed individually)
dependencies = []

# This is set automatically by flit using `etils.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google/etils"
repository = "https://github.com/google/etils"
# Other: `documentation`, `changelog`

[project.optional-dependencies]
array-types = [
    "numpy",
]
ecolab = [
    "jupyter",
    "numpy",
    "mediapy",
    "etils[enp]",
]
edc = [
    "etils[epy]",
]
enp = [
    "numpy",
    "etils[array-types]",
]
epath-no-tf = [  # Users might want to choose between tf / tf-nightly
    "importlib_resources",
    "zipp",
    "etils[epy]",
]
epath = [
    "etils[epath-no-tf]",
    "tf-nightly",
]
epy = [
    "typing_extensions",
]
etqdm = [
    "absl-py",
    "tqdm",
    "etils[epy]",
]
etree = [
    "etils[array_types]",
    "etils[epy]",
    "etils[enp]",
    "etils[etqdm]",
]
etree-dm = [
    "dm-tree",
    "etils[etree]",
]
etree-jax = [
    "jax[cpu]",
    "etils[etree]",
]
etree-tf = [
    "tf-nightly",
    "etils[etree]",
]
all = [
    "etils[array-types]",
    "etils[ecolab]",
    "etils[edc]",
    "etils[enp]",
    "etils[epath]",
    "etils[epy]",
    "etils[etqdm]",
    "etils[etree]",
    "etils[etree-dm]",
    "etils[etree-jax]",
    "etils[etree-tf]",
]

dev = [
    "pytest",
    "pytest-xdist",
    "chex",
    "tfds-nightly",  # TODO(etils): Remove deps
]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
